--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "read-excel-file": "^4.0.6",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",  
-    "deploy": "gh-pages -d build"  
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
